# PX4-Lights

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buzzer_ros.py  buzzer_ros.sh  buzzer_ros_manual.py  buzzer_ros_old.py  package.xml  test.py
Aurora PCB/Aurora/: Aurora.PcbDoc  Aurora.PrjPcb  Aurora.PrjPcbStructure  Aurora.SchDoc  Job1.OutJob  PcbLib1.PcbLib
Aurora PCB/Aurora/Imported pimoroni-boards2040.Library.PrjPcb/: pimoroni-boards2040.Library.IntLib  pimoroni-boards2040.Library.LibPkg  pimoroni-boards2040.Library.PrjPcb  pimoroni-boards2040.PCBLIB  pimoroni-boards2040.SCHLIB
Aurora PCB/Aurora/Imported pimoroni-boards2040.Library.PrjPcb/pimoroni-boards2040.Library1/: pimoroni-boards2040.Library.LibPkg  pimoroni-boards2040.PCBLIB  pimoroni-boards2040.SCHLIB
Aurora PCB/Aurora/Project Outputs for Aurora/: Aurora-macro.APR_LIB  Aurora.DRR  Aurora.EXTREP  Aurora.GBL  Aurora.GBO  Aurora.GBP  Aurora.GBS  Aurora.GKO  Aurora.GM1  Aurora.GM15  Aurora.GM16  Aurora.GM2  Aurora.GM20  Aurora.GM21  Aurora.GM23  Aurora.GM24  Aurora.GM3  Aurora.GM4  Aurora.GM6  Aurora.GM7  Aurora.GPB  Aurora.GPT  Aurora.GTL  Aurora.GTO  Aurora.GTP  Aurora.GTS  Aurora.LDP  Aurora.REP  Aurora.RUL  Aurora.TXT  Aurora.apr  Status Report.Txt
Aurora PCB/Aurora/SnapDocs/: DMG6968U-7.PcbLib  DMG6968U-7.SchLib  ESP32-C3FH4.PcbLib  ESP32-C3FH4.SchLib
Aurora PCB/Aurora/__Previews/: Aurora.SchDocPreview
DemoReel100/: DemoReel100.ino
arduino_led/: arduino_led.ino
