<?xml version="1.0"?>
<package format="2">
  <name>px4_lights</name>
  <version>0.1.0</version>
  <description>px4 lights package</description>

  <maintainer email="you@yourdomain.tld">KW</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/Kian-Wee/PX4-Lights</url>
  <author email="you@yourdomain.tld">KW</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
